--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
 
 #home::before{
     content: "";
-    background: url('../bg.jpg') no-repeat center center/cover;
+    background: url('./bg.jpg') no-repeat center center/cover;
     position: absolute;
     height: 467px;
     top: 0px;
@@ -127,7 +127,7 @@
 #client-section::before{
     content: "";
     position: absolute;
-    background: url('../bg2.jpg') no-repeat center center/cover;;
+    background: url('./bg2.jpg') no-repeat center center/cover;;
     width: 100%;
     height: 80%;
     z-index: -1;
